# brain-friend

./: CMakeLists.txt
common/: opcodeCompiler.c  opcodes.c  stack.c
compiler/: main.c
doc/zh_tw/: book.xml  preface.xml  style.xsl
doc/zh_tw/userGuide/: index.xml
include/: opcodeCompiler.h  opcodes.h  stack.h
interpreter/: main.c
scripts/: dump.lua  pseudoOpcode.lua  x86_64_GNU.lua
test/common/: main.c  opcodeCompiler_test.c  opcodes_test.c  stack_test.c
